--- a/web/app/templates/t5_cargogen.html
+++ b/web/app/templates/t5_cargogen.html
@@ -25,7 +25,7 @@
                     <td>{{ ' '.join(cargo.source.trade_codes) }}</td>
                     <td>{{ cargo.cargo }}</td>
                 </tr>
-                {% if cargo.market %}
+                {% if cargo.market.uwp %}
                 <tr>
                     <td>            
                         Market
