Add support for link.api

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -18,7 +18,12 @@
     {% endif %}
     <ul>
     {% for link in links %}
-    <li><a href="{{ link.uri }}">{{ link.text }}</a></li>
+    <li>
+        <a href="{{ link.uri }}">{{ link.text }}</a> 
+        {% if link.api %}
+        <a href="{{ link.api }}">(API documentation)</a>
+        {% endif %}
+    </li>
     {% endfor %}
     </ul>
 </div>
