--- a/web/app/static/styles.css
+++ b/web/app/static/styles.css
@@ -105,3 +105,7 @@ div.flask-pagedown-preview h3 {
 .table.followers tr {
     border-bottom: 1px solid #e0e0e0;
 }
+
+th, td {
+    padding: 10px;
+}
