Do cellpadding in body tables

--- a/web/app/templates/ct_lbb3_encounter.html
+++ b/web/app/templates/ct_lbb3_encounter.html
@@ -14,13 +14,13 @@
             {{ error_msg }}
         {% endif %}
         {% for terrain in tables %}
-            <table cellpadding="10">
+            <table>
                 <tr>
                     <th>Terrain</th><td>{{ terrain }}</td>
                     <th>UWP</th><td>{{ uwp }}</td>
                 </tr>
                 <tr>
-                    <table cellpadding="10">
+                    <table>
                         <tr>
                             <th>Die</th><th>Animal Type</th>
                             <th>Weight</th><th>Hits</th><th>Armor</th>
