--- a/web/app/static/styles.css
+++ b/web/app/static/styles.css
@@ -106,6 +106,11 @@ div.flask-pagedown-preview h3 {
     border-bottom: 1px solid #e0e0e0;
 }
 
-th, td {
-    padding: 10px;
+/* Body tables */
+
+div.body td, th {
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
